# IS-Cardiac_Agentic_MultiModal_System

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
cloud_backend/src/api/: main.py
cloud_backend/src/db/: base.py
cloud_backend/src/utils/: logging.py
cloud_backend/tests/: test_health.py
config/: base.yaml  cloud_dev.yaml  edge_local.yaml
edge_client/src/app/: api_client.py  ui_streamlit.py
infra/db/: init.sql
infra/docker/: Dockerfile.api  Dockerfile.vllm  Dockerfile.worker
infra/scripts/: bootstrap_db.sh
