cat > pyproject.toml << 'EOF'
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "is-cardiac-agent"
version = "0.1.0"
description = "Agentic multimodal cardiovascular diagnosis backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.8.0,<3.0",
    "SQLAlchemy>=2.0.0,<3.0",
    "psycopg2-binary>=2.9.9,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "PyYAML>=6.0.0,<7.0",
    "httpx>=0.27.0,<1.0",
    "pytest>=8.0.0,<9.0",
    "requests>=2.31.0,<3.0"
]

[tool.setuptools]
packages = []
EOF
